hw3-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  myapp-service
spec:
  selector:
    app: hw2_app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
